service/service-cassandra.yaml
# https://kubernetes.io/docs/tutorials/stateful-application/cassandra/
# https://cheatsheet.dennyzhang.com/cheatsheet-kubernetes-yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra
  name: cassandra
spec:
  clusterIP: None
  ports:
  - port: 9042
  selector:
    app: cassandra
