service/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-monitoring
  namespace: ns-ci
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
